--- a/gunicorn.yaml
+++ b/gunicorn.yaml
@@ -6,13 +6,23 @@
     become: yes
   - name: "Insatll packages"
     shell: |
-      apt install -y software-properties-common python3.9 python3.9-distutils 
+      apt install -y software-properties-common python3.9 python3.9-distutils
     become: yes
   - name: "Change Python Version"
     shell: |
       update-alternatives --install /usr/bin/python python /usr/bin/python3.9 3
     become: yes
   - name: "Create venv Python3.9"
-    pip: virtualenv="/iac/project" 
+    shell: |
+      python3.9 -m venv /iac --without-pip
+      curl https://bootstrap.pypa.io/get-pip.py | python3.9
+    become: yes
+  - name: "Init venv Python3.9"
+    pip: virtualenv="/iac"
      virtualenv_python=python3.9
      requirements=/iac/requirements.txt
+  - name: "Start Gunicorn"
+    shell: |
+      source /etc/environment
+      gunicorn --chdir /iac --bind 0.0.0.0:8000 wsgi:app
+    become: yes
