--- a/gunicorn.yaml
+++ b/gunicorn.yaml
@@ -1,4 +1,6 @@
 - hosts: localhost
+  collections:
+  - community.aws
   tasks:
   - name: "Insatll Repo"
     shell: |
@@ -12,20 +14,15 @@
     shell: |
       update-alternatives --install /usr/bin/python python /usr/bin/python3.9 3
     become: yes
+  - name: Get information about an instance
+    rds_instance_info:
+      db_instance_identifier: mydb
+    register: new_database_info
   - name: "Create venv Python3.9"
     shell: |
       python3.9 -m venv /iac --without-pip
       curl https://bootstrap.pypa.io/get-pip.py | python3.9
     become: yes
-  - name: "Init venv Python3.9"
-    pip: virtualenv="/iac"
-     virtualenv_python=python3.9
-     requirements=/iac/requirements.txt
-  - name: Get information about an instance
-    community.aws.rds_instance_info:
-      db_instance_identifier: mydb
-    register: new_database_info
-
   - name: "Config DB_HOST envvar"
     shell: |
       echo "DB_HOST={{ new_database_info.endpoint }}" >> /etc/environment
@@ -35,3 +32,7 @@
       source /etc/environment
       gunicorn --chdir /iac --bind 0.0.0.0:8000 wsgi:app
     become: yes
+~
+~
+~
+
