--- a/gunicorn.yaml
+++ b/gunicorn.yaml
@@ -24,11 +24,9 @@
     shell: |
       python3.9 -m venv /iac --without-pip
       curl https://bootstrap.pypa.io/get-pip.py | python3.9
+      pip install --upgrade setuptools
+      pip install -r /iac/requirements.txt
     become: yes
-  - name: "Init venv Python3.9"
-    pip: virtualenv="/iac"
-     virtualenv_python=python3.9
-     requirements=/iac/requirements.txt
   - name: "Config DB_HOST envvar"
     shell: |
       echo "DB_HOST={{ new_database_info['instances'][0]['endpoint']['address'] }}" >> /etc/environment
@@ -36,5 +34,5 @@
   - name: "Start Gunicorn"
     shell: |
       source /etc/environment
-      gunicorn --chdir /iac --bind 0.0.0.0:8000 wsgi:app
+      nohup gunicorn --chdir /iac --bind 0.0.0.0:8000 wsgi:app &
     become: yes
